# crtp-curiously-recurring-template-pattern

./: .clang-format  CMakeLists.txt  README.md
src/: crtp-variant.cpp  extension.cpp  interface_crtp.cpp  interface_virtual.cpp  mixins.cpp  phantom_type.cpp  pitfalls.cpp  sample.cpp  wrapper.cpp
